--- a/FlutterHybridiOS/Podfile
+++ b/FlutterHybridiOS/Podfile
@@ -1,8 +1,7 @@
 # Uncomment the next line to define a global platform for your project
-# platform :ios, '9.0'
-
+platform :ios, '11.0'
 flutter_application_path = '../my_flutter'
-load File.join(flutter_application_path, '.ios', 'Flutter', 'podhelper.rb'
+load File.join(flutter_application_path, '.ios', 'Flutter', 'podhelper.rb')
 
 target 'FlutterHybridiOS' do
   # Comment the next line if you don't want to use dynamic frameworks
@@ -18,5 +17,13 @@ target 'FlutterHybridiOS' do
   target 'FlutterHybridiOSUITests' do
     # Pods for testing
   end
+end
 
+post_install do |installer|
+  installer.pods_project.targets.each do |target|
+    target.build_configurations.each do |config|
+      config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '9.0'
+    end
+  end
+  flutter_post_install(installer)
 end
